# Lepton

./: CMakeLists.txt  README.md  imx8.cmake  main.cpp
.devcontainer/: devcontainer.json
include/lepton/: leptonI2cIf.hpp  leptonIf.hpp
include/spi/: spiIf.hpp
include/thermal/: spi.hpp
src/I2C/: i2cIf.cpp
src/lepton/: CMakeLists.txt  leptonI2cIf.cpp
src/sensors/lepton/: CMakeLists.txt
src/sensors/mlx90640/: CMakeLists.txt
src/spi/: CMakeLists.txt  spiIf.cpp
src/tools/: CMakeLists.txt  spi_tools.cpp
src/viewer/: CMakeLists.txt  viewer.cpp
